[package]
name = "rna-ss-params"
version = "0.1.23"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "Library of RNA secondary structure parameters"
repository = "https://github.com/heartsh/rna-ss-params"
readme = "README.md"
keywords = ["bioinformatics", "rna", "secondary-structure"]
license = "MIT"

[dependencies]
lazy_static = "1.4"
getopts = "0.2"

[lib]
path = "src/lib.rs"
name = "rna_ss_params"
